deploy/k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ta-prod
spec:
  selector:
    app: ta-redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ta-redis
  namespace: ta-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ta-redis
  template:
    metadata:
      labels:
        app: ta-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
